k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elixir-service
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: elixirport
  selector:
    app: elixir
